@@ -2794,6 +2794,7 @@ GEN     isprincipalraygen(GEN bnf, GEN x);
 GEN     nf_deg1_prime(GEN nf);
 GEN     nfarchstar(GEN nf,GEN x,GEN arch);
 GEN     rnfconductor(GEN bnf, GEN polrel);
+GEN     rnfconductor0(GEN bnf, GEN T, long flag);
 long    rnfisabelian(GEN nf, GEN pol);
 GEN     rnfnormgroup(GEN bnr, GEN polrel);
 GEN     subgrouplist0(GEN bnr, GEN indexbound, long all);
